--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "DEADLY SPAM BOT",
-  "description": "A POWERFULL AND FAST SPAM BOT.",
-  "logo": "https://telegra.ph/file/e0626b3a0bae9adcea7d6.jpg",
+  "name": "LETHAL SPAM BOT",
+  "description": "A POWERFULL AND FAST SPAM BOT. BY LETHAL OP",
+  "logo": "https://telegra.ph/file/92328c3f822f0aa2cb5b4.jpg",
     "env": {
       "STRING": {
         "description": "Telethon String Session",
